
2016-08-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* error.c, cobc.h (cb_get_strerror): own reentrant version of strerror
	* error.c: extracted (configuration_error_head) from (configuration_error)
	* error.c: adjusted (cb_perror) to receive a formatted message
	* adjusted callers of (cb_perror)

2016-08-01  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (renames_entry): fixed bug #289 where PICTURE of renamed
	  field was not copied to the RENAMES item.

2016-07-31  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: FR #127 extracted (cobc_abort_msg) from (cobc_abort_terminate)
	  and using it in (cobc_sig_handler), too
	* cobc.c: minimized (cob_reg_sighnd) and register libcob's signal handler
	  instead of self-registering one

2016-07-31  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (program_type_clause): marked EXTERNAL as pending.

2016-07-30  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (return_at_end): allow NOT AT END before AT END (bugs #242).

2016-07-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c, cobc.h, tree.c, typeck.c: removed COBC_DUMP_ABORT as it did not
	  work as intended (fixing compiler warnings because of return not reached)
	* pplex.l, scanner.l: removed standard C headers already included by flex
	* error.c: removed inline attribute from (cb_verify), (cb_verify_x) and
	  removed extra function (cb_verify_common)

2016-07-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* error.c, cobc.h: new function cb_perror for returning system errors
	* error.c (print_error): changes for cb_perror
	* cobc.c (cobc_terminate), config.c (cb_load_conf_file), pplex.l (ppcopy):
	  use cb_perror instead of output of a guessed error message

2016-07-27  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, scanner.l: seperated 66-, 78- and 88-level handling from
	  data_description, making it impossible to specify improper clauses.