@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.44.1.
-.TH COBC "1" "July 2016" "cobc (GnuCOBOL) 2.0.0" "User Commands"
+.TH COBC "1" "August 2016" "cobc (GnuCOBOL) 2.0.0" "User Commands"
 .SH NAME
 cobc \- manual page for cobc (GnuCOBOL) 2.0.0
 .SH DESCRIPTION
@@ -287,7 +287,7 @@ treat all files as OPTIONAL
 \- unless NOT OPTIONAL specified
 .SH AUTHOR
 Written by Keisuke Nishida, Roger While, Ron Norman, Simon Sobisch, Edward Hart
-Built     Jul 24 2016 12:46:19
+Built     Aug 01 2016 11:48:56
 Packaged  Oct 25 2015 21:40:28 UTC
 C version "4.8.3 20140911 (Red Hat 4.8.3\-7)"
 .SH "REPORTING BUGS"
